fixed a canvas bug that the images were distorted

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -265,6 +265,7 @@ html,body,#wrapper
   position absolute
   top 0
   left 0
+  pointer-events none
   //color #454545
 #uImg
   max-width 100%
